gitops/apps/example-app-2/strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: example-app-2-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /app2
