gitops/apps/example-app-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-2
  labels:
    app.kubernetes.io/name: example-app-2
    app.kubernetes.io/instance: example-app-2
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: appme-platform
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app-2
  template:
    metadata:
      labels:
        app: example-app-2
        app.kubernetes.io/name: example-app-2
        app.kubernetes.io/instance: example-app-2
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: appme-platform
    spec:
      containers:
      - name: example-app-2
        image: docker.io/morawskioz/example-app-2:1.0.1
        ports:
        - containerPort: 8080
