gitops/apps/example-app-2/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: example-app-2
spec:
  routes:
  - match: Host(`k8s.appunow.com`) && PathPrefix(`/app2`)
    kind: Rule
    middlewares:
    - name: example-app-2-stripprefix
    services:
    - name: example-app-2
      port: 80
